--- a/app/src/main/res/layout/activity_main_drawer.xml
+++ b/app/src/main/res/layout/activity_main_drawer.xml
@@ -7,5 +7,4 @@
     android:layout_width="wrap_content"
     android:layout_gravity="start"
     android:fitsSystemWindows="true"
-    app:headerLayout="@layout/nav_header"
-    app:menu="@menu/drawer_content"/>
+    app:headerLayout="@layout/nav_header" />
