--- a/app/src/main/res/layout/fragment_map_entity_details.xml
+++ b/app/src/main/res/layout/fragment_map_entity_details.xml
@@ -18,12 +18,25 @@
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/messages_background_image">
-            <TextView
-                android:id="@+id/details_view"
+            android:background="@drawable/messages_background_image"
+            android:padding="@dimen/spacing_small"
+            >
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="Lorem Ipsum"/>
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:orientation="vertical">
+            <TextView
+                android:id="@+id/map_entity_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+            <TextView
+                android:id="@+id/map_entity_description"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:textAppearance="?attr/textAppearanceListItem"/>
+            </LinearLayout>
 
         </FrameLayout>
 
