--- a/app/src/main/res/layout/fragment_map_entity_details.xml
+++ b/app/src/main/res/layout/fragment_map_entity_details.xml
@@ -4,9 +4,9 @@
 
         <variable
             name="viewModel"
-            type="com.teamagam.gimelgimel.app.map.viewModel.MapEntityDetailsViewModel" />
+            type="com.teamagam.gimelgimel.app.map.viewModel.MapEntityDetailsViewModel"/>
 
-        <import type="android.view.View" />
+        <import type="android.view.View"/>
     </data>
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -21,25 +21,35 @@
             android:background="@drawable/messages_background_image"
             android:padding="@dimen/spacing_small"
             >
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/white"
                 android:orientation="vertical">
-            <TextView
-                android:id="@+id/map_entity_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@{viewModel.entityName}"
-                />
-            <TextView
-                android:id="@+id/map_entity_description"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@{viewModel.entityDescription}"
-                android:background="@color/white"
-                android:textAppearance="?attr/textAppearanceListItem"
-                />
+
+                <TextView
+                    android:id="@+id/map_entity_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@{viewModel.entityName}"
+                    />
+
+                <TextView
+                    android:id="@+id/map_layer_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@{viewModel.vectorLayerTitle}"
+                    />
+
+                <TextView
+                    android:id="@+id/map_entity_description"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/white"
+                    android:text="@{viewModel.entityDescription}"
+                    android:textAppearance="?attr/textAppearanceListItem"
+                    />
             </LinearLayout>
 
         </FrameLayout>
